config: Binding C-c d to delete-region

--- a/basics.org
+++ b/basics.org
@@ -21,3 +21,11 @@ Show the key bindings that are available for use
 
 #+RESULTS:
 
+* Custom Shortcuts
+
+#+begin_src elisp
+  (global-set-key (kbd "C-c d") 'delete-region)
+#+end_src
+
+#+RESULTS:
+: delete-region
