config: Add YASnippet for Ruby and rest src blocks

--- a/snippets/org-mode/ruby-block.org
+++ b/snippets/org-mode/ruby-block.org
@@ -1,6 +1,7 @@
 # -*- mode: snippet -*-
 # name: ruby code block
-# key: ruby
+# key: #ruby
+# expand-env: ((yas-indent-line 'fixed))
 # --
 #+header: :results output
 #+begin_src ruby
