feature: Add a custom command for code separators
The function is named 'fchauvel/insert-comment-separator'
The command is bound to 'C-c i s'.

--- a/ide.org
+++ b/ide.org
@@ -155,6 +155,36 @@ Permit to cycle through different cases, like camel, snake, etc. Bound to "C-c c
 
 
 
+** Code Separators
+
+This is a custom function to create a separator
+
+#+begin_src elisp
+    (defun fchauvel/insert-comment-separator (text)
+      "Insert a comment separator line of 80 characters.
+  The separator uses the comment character of the active mode and includes TEXT.
+  If TEXT is empty, the separator will only contain dashes."
+      (interactive "sText for separator: ")
+      (let* ((comment-char (or comment-start "#")) 
+             (line-width 80)
+             (text-width (+ (length text) 2))   
+             (dash-count (- line-width text-width (length comment-char) 3)))
+        (insert (concat comment-char
+                        "--- " text " "
+                        (make-string (max 0 dash-count) ?-)
+                        "\n"))))
+#+end_src
+
+We bind it to ~C-c i s~.
+
+#+begin_src elisp
+  (global-set-key (kbd "C-c i s") 'fchauvel/insert-comment-separator)
+#+end_src
+
+#+RESULTS:
+: fchauvel/insert-comment-separator
+
+
 * Project Views   
 
 
