--- a/navigation.org
+++ b/navigation.org
@@ -5,18 +5,27 @@
 
   #+begin_src emacs-lisp
     (use-package helm
+      :ensure t
+      :bind (
+             ("M-x" . helm-M-x)
+             ("C-x r l" . helm-filtered-bookmarks)
+             ("C-x C-f" . helm-find-files)
+             ("C-x C-b" . helm-buffers-list)
+             ("C-x b" . helm-mini)
+             ("M-y" . helm-show-kill-ring)
+      )
       :config
       (helm-mode 1)
-      (global-set-key (kbd "M-x") #'helm-M-x)
-      (global-set-key (kbd "C-x r l") #'helm-filtered-bookmarks)
-      (global-set-key (kbd "C-x C-f") #'helm-find-files)
-      (global-set-key (kbd "C-x C-b") #'helm-buffers-list)
-      (global-set-key (kbd "C-x b") #'helm-mini)
-      (global-set-key (kbd "M-y") #'helm-show-kill-ring))
+      (helm-adapative-mode 1)
+      (setq
+       helm-ff--auto-update-state t
+       helm-ff-newfile-prompt-p t       
+       )
+      )
   #+end_src
 
   #+RESULTS:
-  : t
+  : helm-show-kill-ring
 
   When using ~helm-find-files~ One can use ~C-c C-u~ to refresh the
   file list. Newly created files may be missing.
@@ -112,7 +121,7 @@ Use [[https://github.com/joodland/bm][Visual Bookmarks]]
       (beacon-mode t))
   #+end_src
   
-
+  
 * Help & Shortcuts
 
   Use which-key to show the shortcuts available, using ~C-x~and wait a
